json response format fix

--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "react": "^16.10.2",
     "react-dom": "^16.10.2",
     "react-html5-camera-photo": "^1.4.3",
+    "react-modal-image": "^2.5.0",
+    "react-photo-gallery": "^8.0.0",
     "react-scripts": "3.2.0"
   },
   "scripts": {
